objects/Quote_Teams_Framework__mdt.object
<CustomObject>
    <description>The designations and teams responsible for working specific statuses of the Quote Lifecycle</description>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Services</fullName>
                    <default>true</default>
                    <label>Project Services</label>
                </value>
                <value>
                    <fullName>Core Customer</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Quote</fullName>
                    <default>true</default>
                    <label>New Quote</label>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Amendment Quote</fullName>
                    <isActive>false</isActive>
                    <label>Amendment Quote</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Product Configured</fullName>
                </value>
                <value>
                    <fullName>Cost Configured</fullName>
                </value>
                <value>
                    <fullName>Price Configured</fullName>
                </value>
                <value>
                    <fullName>Quote Submitted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <label>Team Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                    <default>true</default>
                    <label>Customer Service</label>
                </value>
                <value>
                    <fullName>SSM</fullName>
                </value>
                <value>
                    <fullName>Project Services</fullName>
                </value>
                <value>
                    <fullName>VRM Procurement</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Canada VRM</fullName>
                </value>
                <value>
                    <fullName>Internal Spec Corrections</fullName>
                </value>
                <value>
                    <fullName>Service Resolution</fullName>
                </value>
                <value>
                    <fullName>New Stores</fullName>
                </value>
                <value>
                    <fullName>Service Fulfillment - New Service</fullName>
                </value>
                <value>
                    <fullName>Service Fulfillment – Service Change</fullName>
                </value>
                <value>
                    <fullName>Corrections</fullName>
                    <isActive>false</isActive>
                    <label>Corrections</label>
                </value>
                <value>
                    <fullName>Service Setup &amp; Maintenance</fullName>
                    <isActive>false</isActive>
                    <label>Service Setup &amp; Maintenance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Teams Framework</label>
    <listViews>
        <fullName>Teams_Listview</fullName>
        <columns>MasterLabel</columns>
        <columns>Quote_Type__c</columns>
        <columns>Customer_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Team_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Teams Listview</label>
    </listViews>
    <pluralLabel>Quote Teams Frameworks</pluralLabel>
</CustomObject>